# zola_site

./: .gitattributes  .gitignore  .gitmodules  404.html  Makefile  README.md  config.toml  index.html  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: build.yml  ci_zola.yml
content/: _index.md
content/education/: _index.md
content/papers/: _index.md
content/patents/: _index.md
content/work/: _index.md
data/cv/: cv.yaml
education/: index.html
papers/: index.html
patents/: index.html
scripts/: import-bibtex.py  split-bibtex.py
src/zola_site/: __init__.py
templates/: display-cv.html  publications-bibtex.html
templates/macros/: bibentry.html  cv.html  publication.html
work/: index.html
