[project]
name = "zola_site"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Radhakrishna Valiveti",email = "rvaliveti@outlook.com"},
]
dependencies = [
    "bibtexparser>=1.4.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
